subjects/automation/terragrunt/udemy_visual-path_terragrunt-deep-dive/eks-vpc-network/elastic_ip.tf
resource "aws_eip" "nat_eip" {
  vpc = true
  tags = {
    "Name" = "${var.environment}-nat-eip"
  }
}
