subjects/automation/terragrunt/udemy_visual-path_terragrunt-deep-dive/eks-vpc-network/security_group_rules.tf
resource "aws_security_group_rule" "ingress_ssh_rules" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "TCP"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.default_group.id
}

resource "aws_security_group_rule" "ingress_http_rules" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "TCP"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.default_group.id
}

resource "aws_security_group_rule" "default_egress_rule" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.default_group.id
}
